Lab 3 Kubernetes files/msa/14-traefik-middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-py
  namespace: multi-service-app
spec:
  stripPrefix:
    prefixes:
      - /api/py
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-node
  namespace: multi-service-app
spec:
  stripPrefix:
    prefixes:
      - /api/node
