Lab 3 Kubernetes files/msa/15-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-ingress
  namespace: multi-service-app
  annotations:
    # Format: <middleware-namespace>-<middleware-name>@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: >-
      multi-service-app-strip-api-py@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api/py
            pathType: Prefix
            backend:
              service:
                name: python-api
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-ingress-node
  namespace: multi-service-app
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: >-
      multi-service-app-strip-api-node@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api/node
            pathType: Prefix
            backend:
              service:
                name: node-api
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-ingress-frontend
  namespace: multi-service-app
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-frontend
                port:
                  number: 80
