Lab 3 Kubernetes files/msa/19-httproute-canary.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: msa-route
  namespace: multi-service-app
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/py
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: python-api
          port: 80
    # 90/10 split across two backends
    - matches:
        - path:
            type: PathPrefix
            value: /api/node
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: node-api
          port: 80
          weight: 90
        - name: node-api-canary
          port: 80
          weight: 10
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: react-frontend
          port: 80
